bk_ida/gccida/g3/copy_rtx_and_substitute
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2339:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v3; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2340:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2367:4: error: expected ';' after expression
rtx v33; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2367:5: error: use of undeclared identifier 'v33'
rtx v33; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2368:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2368:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2371:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2372:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v38; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2374:4: error: expected ';' after expression
rtx v40; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2374:5: error: use of undeclared identifier 'v40'
rtx v40; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2376:4: error: expected ';' after expression
rtx v42; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2376:5: error: use of undeclared identifier 'v42'
rtx v42; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2377:4: error: expected ';' after expression
rtx v43; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2377:5: error: use of undeclared identifier 'v43'
rtx v43; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2391:4: error: expected ';' after expression
rtx v57; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2391:5: error: use of undeclared identifier 'v57'
rtx v57; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2395:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *rttree; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2397:4: error: expected ';' after expression
rtx v63; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/integrate.c:2397:5: error: use of undeclared identifier 'v63'
rtx v63; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/copy_rtx_and_substitute/src/obj/integrate.o] Error 1
